fix: implement the 2026-07-02 code-review defect backlog (core, bindings, examples)
Implements the confirmed correctness findings from the 2026-07-02 code-level
review (docs/analysis/2026-07-02-code-review.md) plus the still-open 2026-07-01
repo-review items (#3 in-process crash containment via sigaltstack + jmp_buf
alarm-race fix, #9 Lua emu integer-arg marshalling, #10 emulator per-call
register-file reset on a reused handle), spanning the C core, all ten language
bindings, the example suites, and the negative/expect tests.

Per-area breakdown and validation in
docs/summaries/2026-07-02-batch-{a,b,c,d,e,f,g,h}-*.md.

Co-Authored-By: Claude Opus 4.8 (1M context) <noreply@anthropic.com>